--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "1.7.18",
     "@react-three/drei": "9.92.1",
     "@react-three/fiber": "8.15.12",
     "framer-motion": "10.16.16",
