--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next-themes": "0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-intersection-observer": "9.5.3",
     "sass": "1.69.7"
   },
   "devDependencies": {
